group 'com.soong'
version '1.0'

apply plugin: 'java'

sourceCompatibility = 1.8
apply plugin: 'maven-publish'
publishing {
    publications {
        myPublish(MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            name "myTools"
            url ""
        }
    }
}
repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.3'
    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.11'
    compile group: 'c3p0', name: 'c3p0', version: '0.9.1.2'
}

def createDir = {
    path ->
        File dir = new File(path)
        if (!dir.exists()) {
            dir.mkdirs()
        }
}
task makeJavaDir() {
    def paths = ['src/main/java', 'src/main/resources', 'src/test/java', 'src/test/resources']
    doFirst {
        paths.forEach(createDir)
    }
}
tasks.withType(JavaCompile){
    options.encoding = "UTF-8"
}